--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,24 @@
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
+# Object files
 *.o
 *.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
 
 # Executables
 *.exe
 *.out
 *.app
+
+# Build directories
+build/
+bin/
+
+# Other directories
+/junk
+
+# IDE files
+.vscode/
+.idea/
+*.suo
+*.user
+
+# Misc
+.DS_Store
